feat: add initial Python project configuration and dependency management files

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,7 +4,7 @@ uvicorn
 openai-whisper
 sounddevice
 webrtcvad-wheels
-numpy>=0.38.0
+numpy>=2.0
 python-dotenv>=1.2.1
 
 # --- AI / NLP / LangChain ---
@@ -14,8 +14,8 @@ langchain-huggingface
 
 # --- Authentication & Security ---
 python-jose[cryptography]
-passlib[bcrypt]
-bcrypt==3.2.2
+passlib[bcrypt]>=1.7.4
+bcrypt>=4.0.0
 
 # --- Database ---
 sqlalchemy
@@ -34,9 +34,9 @@ idna ; python_version>="3.0"  # (optional, auto installed normally)
 insightface
 onnx==1.20.0
 onnxruntime==1.23.2
-opencv-python==4.9.0.80
+opencv-python>=4.10.0.84
 pillow==12.0.0
-numpy
+
 scikit-image==0.25.2
 albucore==0.0.24
 albumentations==2.0.8
