--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -3,7 +3,7 @@ name = "server"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.10,<3.13"
+requires-python = ">=3.10"
 dependencies = [
     "albucore==0.0.24",
     "albumentations==2.0.8",
@@ -36,11 +36,11 @@ dependencies = [
     "ml-dtypes==0.5.4",
     "mpmath==1.3.0",
     "networkx==3.4.2",
-    "numpy>=0.38.0",
+    "numpy>=2.0",
     "onnx==1.20.0",
     "onnxruntime==1.23.2",
     "openai-whisper>=20250625",
-    "opencv-python==4.9.0.80",
+    "opencv-python>=4.10.0.84",
     "packaging==25.0",
     "passlib[bcrypt]>=1.7.4",
     "pillow==12.0.0",
