--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,7 +4,7 @@ uvicorn
 openai-whisper
 sounddevice
 webrtcvad-wheels
-numpy<2.0
+numpy>=2.0
 python-dotenv>=1.2.1
 
 # --- AI / NLP / LangChain ---
